--- a/.github/workflows/image-mirror.yml
+++ b/.github/workflows/image-mirror.yml
@@ -15,7 +15,8 @@ jobs:
   # 镜像转换任务
   sync_to_target_registry:
     # 运行环境
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
+    # runs-on: ubuntu-22.04
     # 运行条件 => issues 的 label 包含 image-mirror
     # if: contains(github.event.issue.labels.*.name, 'image-mirror')
     concurrency:
