--- a/.github/workflows/image-mirror.yml
+++ b/.github/workflows/image-mirror.yml
@@ -123,10 +123,10 @@ jobs:
           for i in ${img[@]}
           do
             tagName=$(echo $i | awk -F "/" '{print $NF}');
-            echo "$i: ${TARGET_REGISTRY}/${TARGET_NAMESPACE}/${tagName}" >> images.yml;
-            echo "${TARGET_REGISTRY}/${TARGET_NAMESPACE}/${tagName}" >> dockerhub-image.yml;
-            # echo $i: ${TARGET_REGISTRY}/${TARGET_NAMESPACE}/${tagName} >> images.yml;
-            # echo ${TARGET_REGISTRY}/${TARGET_NAMESPACE}/${tagName} >> dockerhub-image.yml;
+            # echo "$i: ${TARGET_REGISTRY}/${TARGET_NAMESPACE}/${tagName}" >> images.yml;
+            # echo "${TARGET_REGISTRY}/${TARGET_NAMESPACE}/${tagName}" >> dockerhub-image.yml;
+            echo $i: ${TARGET_REGISTRY}/${TARGET_NAMESPACE}/${tagName} >> images.yml;
+            echo ${TARGET_REGISTRY}/${TARGET_NAMESPACE}/${tagName} >> dockerhub-image.yml;
           done
           cat images.yml
           ./image-syncer  --auth=./auth.yml --images=./images.yml 
